force-app/main/default/objects/Responce__c/Responce__c.object-meta.xml
<CustomObject>
    <description>This table stores the responses of the user for each question, with foreign keys referencing the corresponding assessment, question, and answer option (for multiple choice and true/false questions), and a text field for short answer questions.</description>
    <label>Responce</label>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Responce Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Responces</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>