force-app/main/default/objects/Responce__c/fields/AnswerOption__c.field-meta.xml
<CustomField>
    <fullName>AnswerOption__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>AnswerOption</label>
    <referenceTo>AnswerOption__c</referenceTo>
    <relationshipLabel>Responces</relationshipLabel>
    <relationshipName>Responces</relationshipName>
    <type>Lookup</type>
</CustomField>