force-app/main/default/objects/Responce__c/fields/AnswerText__c.field-meta.xml
<CustomField>
    <fullName>AnswerText__c</fullName>
    <label>AnswerText</label>
    <type>TextArea</type>
</CustomField>